--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ asgiref==3.11.0
 certifi==2025.11.12
 colorama==0.4.6
 distro==1.9.0
+dj-database-url==3.1.0
 Django==5.2.9
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 groq==0.37.1
+gunicorn==24.1.1
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -16,6 +18,9 @@ idna==3.11
 jiter==0.12.0
 mysqlclient==2.2.7
 openai==2.8.1
+packaging==26.0
+pillow==12.1.0
+psycopg2-binary==2.9.11
 pydantic==2.12.5
 pydantic_core==2.41.5
 PyJWT==2.10.1
@@ -28,3 +33,4 @@ tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
+whitenoise==6.11.0
