--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,13 @@ services:
     runtime: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn edtech.wsgi:application
+    startCommand: |
+      python manage.py migrate &&
+      python manage.py loaddata fixtures/topics.yaml &&
+      python manage.py loaddata fixtures/lessons.yaml &&
+      python manage.py loaddata fixtures/quizzes.yaml &&
+      python manage.py loaddata fixtures/questions.yaml &&
+      gunicorn edtech.wsgi:application
     envVars:
       - key: SECRET_KEY
         sync: false
