--- a/render.yaml
+++ b/render.yaml
@@ -3,14 +3,18 @@ services:
     name: edtech-backend
     runtime: python
     plan: free
+    
     buildCommand: pip install -r requirements.txt
+  
     startCommand: |
       python manage.py migrate &&
       python manage.py loaddata fixtures/topics.yaml &&
       python manage.py loaddata fixtures/lessons.yaml &&
       python manage.py loaddata fixtures/quizzes.yaml &&
       python manage.py loaddata fixtures/questions.yaml &&
+      python manage.py collectstatic --noinput &&
       gunicorn edtech.wsgi:application
+
     envVars:
       - key: SECRET_KEY
         sync: false
